--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,24 +1,24 @@
 <%- if controller_name != 'sessions' %>
 アカウントをお持ちの方は
-<%= link_to "こちら", new_user_session_path %>
+<%= link_to "こちら", new_user_session_path, class: "devise__common--guide" %>
 へ<br>
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
 初めての方は
-<%= link_to "こちら", new_user_registration_path %>
+<%= link_to "こちら", new_user_registration_path, class: "devise__common--guide" %>
 へ<br>
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
 パスワードを忘れた方は
-<%= link_to "再発行の手続き", new_user_password_path %>
+<%= link_to "再発行の手続き", new_user_password_path, class: "devise__common--guide" %>
 へ<br>
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
 サインアップ認証メールが届いていない場合は
-<%= link_to "こちら", new_user_confirmation_path %>
+<%= link_to "こちら", new_user_confirmation_path, class: "devise__common--guide" %>
 へ<br>
 <% end %>
 
