[Fix] remove routing about Makings#show. [Fix] details.

--- a/app/assets/stylesheets/user/application.scss
+++ b/app/assets/stylesheets/user/application.scss
@@ -25,6 +25,7 @@
         display: inline-block;
         list-style: none;
         vertical-align: middle;
+        text-indent: 1em;
       }
     }
     &--interface {
