--- a/app/assets/stylesheets/user/application.scss
+++ b/app/assets/stylesheets/user/application.scss
@@ -25,7 +25,6 @@
         display: inline-block;
         list-style: none;
         vertical-align: middle;
-        text-indent: 1em;
       }
     }
     &--interface {
@@ -46,6 +45,7 @@
       position: absolute;
       text-align: left;
       background-color: white;
+      text-indent: .5em;
       z-index: 10;
       &:hover {
         display: block;
@@ -115,9 +115,7 @@
   }
   &__flash {
     width: 100%;
-    // width: 100vw;
     text-align: center;
-    // padding: 1em 0;
     &--notice {
       color: whitesmoke;
       background-color: deepskyblue;
