[Add] Patterns controller test. [Fix] details.

--- a/app/assets/stylesheets/user/application.scss
+++ b/app/assets/stylesheets/user/application.scss
@@ -120,5 +120,9 @@
       color: whitesmoke;
       background-color: deepskyblue;
     }
+    &--alert {
+      color: black;
+      background-color: gold;
+    }
   }
 }
