--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
     <!-- flashメッセージ -->
     <% if flash.any? && ! is_devise_controller?( controller_name ) then %>
     <% flash.each do |key, message| %>
+    <% next if key == :timedout %>
     <p class="application__flash application__flash--<%= key %>"><%= message %></p>
     <% end %>
     <% end %>
@@ -37,13 +38,13 @@
       <div class="row">
         <!--メインセクション（左側：カテゴリ一覧）-->
         <% if include_category_index?( controller_name, action_name ) then %>
-        <div class="col-md-2 application__layouts--leftSection">
+        <div class="col-lg-2 application__layouts--leftSection">
           <%= render 'categories/index' %>
         </div>
         <% end %>
 
         <!--メインセクション（右側：各ページ）-->
-        <div class="col-md-10 application__layouts--rightSection">
+        <div class="col-lg-10 application__layouts--rightSection">
           <%= yield %>
         </div>
       </div>
